Java+Kotlin buttons

--- a/HelloKotlin/app/src/main/AndroidManifest.xml
+++ b/HelloKotlin/app/src/main/AndroidManifest.xml
@@ -9,13 +9,23 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelloKotlin">
-        <activity android:name=".MainActivity">
+        <activity android:name=".BMIKotlinActivity"></activity>
+        <activity android:name=".BMIJavaActivity" />
+        <activity
+            android:name=".MainActivity"
+            android:label="Bmi Calculation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".BmiJavaActivity"
+            android:label="BmiJacaActivity" />
+        <activity
+            android:name=".BmiKotlinActivity"
+            android:label="BmiKotlin" />
     </application>
 
 </manifest>
